Bug 1624436 - Don't include GTK widget padding in outline: auto size. r=karlt,stransky, a=jcristau

To paint outline: auto, we paint the focused border of a GTK_ENTRY_PAINT.

We're also adding the padding of the entry, and that's wrong and causes
undesirable padding that looks bogus.

Differential Revision: https://phabricator.services.mozilla.com/D68191

--HG--
extra : source : ee0d41c18c40e8364705ff6609442c7895a4ec17